src-ken&y/objects/Receipt_Line__c.object
<CustomObject>
    <customHelpPage>HelpReceivingDocument</customHelpPage>
    <description>Purchase order receipts</description>
    <fields>
        <fullName>ASN_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ASN Line</label>
        <referenceTo>ASN_Line__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Company</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <description>Date the item is received.</description>
        <inlineHelpText>Date the item is received.</inlineHelpText>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <formula>Purchase_Order_Line__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Expiration Date for this receipt line.</description>
        <inlineHelpText>Expiration Date for this receipt line.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extended_Cost__c</fullName>
        <description>Extended Cost for the line</description>
        <inlineHelpText>The extended cost for the line. Extended cost is the unit cost multiplied by the number of items that were purchased.</inlineHelpText>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to facility</description>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <formula>Receiving_Document__r.Finalized__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <formula>Receiving_Document__r.Historical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Transit_Quantity__c</fullName>
        <formula>IF( Quantity_Declared__c &gt;0 , Quantity_Declared__c - Quantity_Received__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Transit Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invoiced In Full</description>
        <label>Invoiced In Full</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Item received</description>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Consigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <description>Line number on the purchase order</description>
        <formula>Purchase_Order_Line__r.Line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to location</description>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <description>Lot number for this receipt line.</description>
        <inlineHelpText>Lot number for this receipt line.</inlineHelpText>
        <label>Lot Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Matched</description>
        <inlineHelpText>Indicates that the receipt line is matched to a valid invoice.</inlineHelpText>
        <label>Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Boxes__c</fullName>
        <description>Number of boxes of this item in this shipment</description>
        <label>Number of Boxes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line</label>
        <referenceTo>Order_Line__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packaging_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packaging UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Purchase Order Line</description>
        <label>Purchase Order Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Purchase_Order_Line__c.Purchase_Order__c</field>
                <operation>equals</operation>
                <valueField>$Source.Purchase_Order__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up a purchase order</description>
        <label>Purchase Order</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Purchase_Order__c.Supplier__c</field>
                <operation>equals</operation>
                <valueField>$Source.Supplier__c</valueField>
            </filterItems>
            <filterItems>
                <field>Purchase_Order__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <formula>IF((ISPICKVAL(Receiving_Document__r.Type__c , &apos;Purchase Order Return&apos; ) || ISPICKVAL(Receiving_Document__r.Type__c , &apos;Logical Purchase Order Return&apos;)), Purchase_Order_Line__r.Unit_Price__c *  (Quantity_Returned_to_Supplier_for_Credit__c + Quantity_returned_to_supplier__c) , 
			 Purchase_Order_Line__r.Unit_Price__c *  Quantity_Received__c
			 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchasing_UOM__c</fullName>
        <description>Purchasing unit of measure</description>
        <formula>Item__r.Purchasing_UOM__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchasing UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Putaway_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the location where the item is going to be put away to. Will be defaulted by stock movement rules.</description>
        <label>Putaway Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Receipt Lines (Putaway Location)</relationshipLabel>
        <relationshipName>Receipt_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Actually_Returned__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity that has actually been picked from inventory and returned.</description>
        <inlineHelpText>Quantity that has actually been removed from inventory and returned to the supplier.</inlineHelpText>
        <label>Quantity Actually Returned</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Consumed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity of consigned items that have been consumed.</description>
        <inlineHelpText>Quantity of consigned items that have been consumed.</inlineHelpText>
        <label>Quantity Consumed</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Declared__c</fullName>
        <description>Quantity shipped on Advanced Shipment Notice</description>
        <inlineHelpText>Quantity shipped on Advanced Shipment Notice.</inlineHelpText>
        <label>Quantity Declared</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Received__c</fullName>
        <description>Quantity received</description>
        <label>Quantity Received</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Returned_to_Supplier_for_Credit__c</fullName>
        <description>Quantity returned to supplier for credit only. This amount is subtracted from quantity still due.</description>
        <inlineHelpText>Quantity returned to supplier for credit only. This amount is subtracted from the quantity still due.</inlineHelpText>
        <label>Quantity Returned for Credit</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Shipped__c</fullName>
        <defaultValue>0</defaultValue>
        <description>populated when the ASN is released and the fob point is origin.</description>
        <label>Quantity Shipped</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Still_Due_For_Putaway__c</fullName>
        <label>Quantity Still Due For Putaway</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_To_Stock__c</fullName>
        <description>The invoice quantity (purchasing UOM) converted to stocking UOM.</description>
        <label>Quantity To Stock</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_returned_to_supplier__c</fullName>
        <description>Quantity returned to supplier.</description>
        <label>Quantity Returned to Supplier</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_to_Consume__c</fullName>
        <description>Consigned Quantity that has not been received but not consumed yet.</description>
        <formula>Quantity_Received__c - Quantity_Consumed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity to Consume</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiving_Document__c</fullName>
        <description>Lookup to Receiving Document</description>
        <label>Receiving Document</label>
        <referenceTo>Receiving_Document__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Receipt_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Receipt Line</label>
        <referenceTo>Receipt_Line__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>reference to the shipment line to say this receipt is against which shipment</description>
        <label>Shipment Line</label>
        <referenceTo>Shipment_Line__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Cost__c</fullName>
        <label>Standard Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Line status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtransaction_Type__c</fullName>
        <label>Subtransaction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Auto_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Auto Invoice</label>
        <referenceTo>Supplier_Invoice__c</referenceTo>
        <relationshipLabel>Auto Invoiced Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines_Auto_Invoice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The supplier from which the items were purchased.</description>
        <label>Purchase From Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Supplier__c.Type__c</field>
                <operation>equals</operation>
                <value>Purchasing</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Uninvoiced_Quantity__c</fullName>
        <description>Quantity remaining to be invoiced (No Receipt Invoice Line has been generated for this quantity yet).</description>
        <label>Uninvoiced Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Unit price on the purchase order line at the time of this receipt</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Receipt Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Purchase_Order__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Receipt Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receipt Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_add_Drop_Ship_PO_to_ASN_RD</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Receiving_Document__r.Type__c, &apos;Advanced Shipment Notice&apos;), ISPICKVAL(Purchase_Order__r.Type__c , &apos;Drop Ship&apos; ))</errorConditionFormula>
        <errorMessage>Cannot add a Drop Ship Purchase Order Line to Receiving Document of type ASN</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Purchase_Order_Line_Status_Check</fullName>
        <active>true</active>
        <description>If the record is new then the Purchase Order Line status should be &apos;Open&apos;</description>
        <errorConditionFormula>ISNEW() &amp;&amp; 
Purchase_Order_Line__c != null &amp;&amp;
NOT( ISPICKVAL(Purchase_Order_Line__r.Status__c, &apos;Open&apos;)) &amp;&amp; 
NOT(ISPICKVAL(Receiving_Document__r.Type__c, &apos;Purchase Order Return&apos;)) &amp;&amp;
NOT(ISPICKVAL(Receiving_Document__r.Type__c, &apos;Logical Purchase Order Return&apos;)) &amp;&amp; 
NOT(ISPICKVAL(Receiving_Document__r.Type__c, &apos;In-Transit&apos;))</errorConditionFormula>
        <errorMessage>Purchase Order Line must be Status &apos;Open&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Purchase_Order_Status_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; 
Purchase_Order__c != null &amp;&amp; 
NOT( ISPICKVAL(Purchase_Order__r.Status__c, &apos;Open&apos;)) &amp;&amp; 
NOT( ISPICKVAL(Receiving_Document__r.Type__c, &apos;Purchase Order Return&apos;)) &amp;&amp;
NOT(ISPICKVAL(Receiving_Document__r.Type__c, &apos;Logical Purchase Order Return&apos;)) &amp;&amp; 
NOT( ISPICKVAL(Receiving_Document__r.Type__c, &apos;In-Transit&apos;))</errorConditionFormula>
        <errorMessage>Purchase Order must be Status Open</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>match_company</fullName>
        <active>true</active>
        <description>Company must match Receiving Document Company</description>
        <errorConditionFormula>Company__c != null &amp;&amp; 
Receiving_Document__r.Company__c != null &amp;&amp; 
Company__c != Receiving_Document__r.Company__c</errorConditionFormula>
        <errorMessage>Company must match Receiving Document Company</errorMessage>
    </validationRules>
</CustomObject>